chore: reformatted learning service code